{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 32,
  "lineage": "8c8e6331-8a6e-5ad8-8d11-6efce5f3775f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03702c7d98e82351e",
            "domain": "vpc",
            "id": "eipalloc-bc51b286",
            "instance": "i-0b0f7960f9361f6ab",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09f61f363e0f7a41f",
            "private_dns": "ip-172-31-3-108.eu-central-1.compute.internal",
            "private_ip": "172.31.3.108",
            "public_dns": "ec2-3-67-208-4.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.208.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.this",
            "aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-043097594a7df80ec",
            "arn": "arn:aws:ec2:eu-central-1:865588905898:instance/i-0b0f7960f9361f6ab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0f7960f9361f6ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "admin_public_key_id",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f61f363e0f7a41f",
            "private_dns": "ip-172-31-3-108.eu-central-1.compute.internal",
            "private_ip": "172.31.3.108",
            "public_dns": "ec2-3-123-43-119.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.43.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e583525ba306eb66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "temporary20210520085412753200000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-57d5531b",
            "tags": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc7417a83d8fbbee"
            ]
          },
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:865588905898:security-group/sg-0bc7417a83d8fbbee",
            "description": "Temporary SG for hillel class 17",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc7417a83d8fbbee",
            "ingress": [],
            "name": "temporary20210520085412753200000001",
            "name_prefix": "temporary",
            "owner_id": "865588905898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "tags_all": {
              "Class": "Class 17",
              "Project": "Hillel",
              "Purpose": "Education"
            },
            "timeouts": null,
            "vpc_id": "vpc-87e974ed"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow plain HTTP from anywhere",
            "from_port": 80,
            "id": "sgrule-2749653007",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc7417a83d8fbbee",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow secured HTTPS from anywhere",
            "from_port": 443,
            "id": "sgrule-1812577409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc7417a83d8fbbee",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere. It is insecure but we are brave!",
            "from_port": 22,
            "id": "sgrule-359546298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc7417a83d8fbbee",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this"
          ]
        }
      ]
    }
  ]
}